# ranch_pi

./: README.md  Self_Build_Costs_Data.xlsx  main.py  pyproject.toml
config/: model_config.yaml  pipeline_config.yaml  stress_config.yaml
data/: assumptions.json  clean_inputs.csv  gantt_map.csv  risks.csv
results/: cost_mc_results.csv  mc_summary.json  monthly_profile.npy  pipeline_run_summary.json  schedule_mc_results.csv  schedule_summary.json  sensitivity_results.csv  sensitivity_summary.json
src/: config_validator.py  pipeline.py  stage_01_data_prep.py  stage_02_cost_model.py  stage_03_schedule_model.py  stage_04_sensitivity.py
tests/: test_01_data_prep.py  test_02_cost_model.py  test_03_schedule_model.py  test_04_sensitivity.py
